# binance-cli

./: .gitignore  README.md  accounts.db  commands.md  cryptogent.toml  plan.md  pyproject.toml  telegram.session
cryptogent/: __main__.py  tests.py  types.py
cryptogent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cryptogent/api/: __init__.py  service.py
cryptogent/cli/: main.py
cryptogent/config/: edit.py  io.py  model.py
cryptogent/db/: connection.py  migrate.py  schema.sql
cryptogent/exchange/: binance_errors.py  binance_futures.py  binance_http.py  binance_signing.py  binance_spot.py  interfaces.py
cryptogent/execution/: executor.py  result_parser.py
cryptogent/market/: candles.py  compute_engine.py  market_data_service.py  tickers.py
cryptogent/models/: feasibility_result.py  trade_plan.py
cryptogent/planning/: allocation.py  asset_selector.py  feasibility.py  strategy.py  trade_planner.py
cryptogent/safety/: validator.py
cryptogent/state/: manager.py
cryptogent/sync/: binance_announcements_sync.py  binance_sync.py  coindesk_rss_sync.py  fear_greed_sync.py  gnews_sync.py  telegram_sync.py  (+1 more)
phases/: locked_rules_sell_pnl_dust.md  phase_10_llm_integration.md  phase_11_logging.md  phase_12_manual_loop_trading.md  phase_13_market_status.md  phase_1_foundation.md  phase_2_exchange_integration.md  phase_3_local_state.md  phase_4_trade_input.md  phase_5_market_planning.md  phase_6_safety.md  phase_7_execution.md  phase_8_monitoring.md  phase_9_reliability.md
testing/: test_cli_commands.py  test_trade_commands.py
(+40 files in other folders)
